--- a/PaintCSharp/Grafico/Grafico/Grafico.csproj
+++ b/PaintCSharp/Grafico/Grafico/Grafico.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circulo.cs" />
+    <Compile Include="Elipse.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
